Fix spacing issue with landing page

--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -39,11 +39,10 @@ body {
     align-items: center;
 }
 
-  .container-button > button {
-    width: 100px;
-    height: 40px;
+  .buttonContainer > button {
+    flex-basis: calc(50% - 10px);
+    margin: 5px;
     text-align: center;
-    margin: 0 .5em;
   }
 
   .login_username {
